<resources>
    <string name="app_name">Practica2</string>
    <string name="contac_us">Contac us</string>
    <string name="subscribe_to_our_newsletter">Subscribe to our newsletter</string>
    <string name="send_and_copy_to_yourself">Send and copy to yourself</string>
    <string name="contact_us">Contact us</string>
    <string name="e_mail">E-mail: *</string>
    <string name="message">Message:</string>
    <string name="phone">Phone:</string>
    <string name="textview">TextView</string>
    <string name="send">SEND</string>
</resources>